--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,6 +8,14 @@
         <servlet-name>Usuario</servlet-name>
         <servlet-class>Controle.Usuario</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>NewServlet</servlet-name>
+        <servlet-class>Controle.NewServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>CategoriaControle</servlet-name>
+        <servlet-class>Controle.CategoriaControle</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>UsuarioControle</servlet-name>
         <url-pattern>/UsuarioControle</url-pattern>
@@ -15,6 +23,14 @@
     <servlet-mapping>
         <servlet-name>Usuario</servlet-name>
         <url-pattern>/Usuario</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>NewServlet</servlet-name>
+        <url-pattern>/NewServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CategoriaControle</servlet-name>
+        <url-pattern>/CategoriaControle</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
