--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -20,6 +20,10 @@
         <servlet-name>ProdutoControle</servlet-name>
         <servlet-class>Controle.ProdutoControle</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CestaControle</servlet-name>
+        <servlet-class>Controle.CestaControle</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>UsuarioControle</servlet-name>
         <url-pattern>/UsuarioControle</url-pattern>
@@ -39,6 +43,10 @@
     <servlet-mapping>
         <servlet-name>ProdutoControle</servlet-name>
         <url-pattern>/ProdutoControle</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CestaControle</servlet-name>
+        <url-pattern>/CestaControle</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
